--- a/env/.env
+++ b/env/.env
@@ -1,1 +1,7 @@
-#example env
+# Spotify
+CLIENT_ID=YOURSPOTIFYCLIENTIDHERE
+CLIENT_SECRET=YOURSPOTIFYCLIENTSECRETHERE
+REDIRECT_URI=https://YOURFRONTENDURL/auth
+
+# Other
+SERVER_URL=YOURSERVERURL
