--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,17 +12,17 @@ services:
       - ./data:/data
       - ./letsencrypt:/etc/letsencrypt
   # Guess The Song Frontend
-  frontend:
+  client:
     image: 'thaemisch/gts-client:x86_64'           # IF YOU ARE ON ARM ARCHITECTURE, CHANGE TO :arm
     restart: unless-stopped
     ports:
-      - '5001:80'
+      - '5001:3000'
     environment:
       - CLIENT_ID=YOURSPOTIFYCLIENTIDHERE          # CHANGE THIS #
       - REDIRECT_URI=https://example.com/auth      # CHANGE THIS # PATH MUST STAY '/auth'
       - SERVER_URL=https://server.example.com      # CHANGE THIS #
   # Guess The Song Backend
-  #backend:
+  #server:
   #  image: 'thaemisch/gts-server:latest'
   #  restart: unless-stopped
   #  ports:
